# handson-fastapi

./: .env.template  .gitignore  Dockerfile  Makefile  cli.py  config.py  docker-compose.yaml  main.py  pyproject.toml
handson_fastapi/: models.py  service.py
handson_fastapi/db/: base.py
