[tool.poetry]
name = "Hands-on FastAPI"
version = "0.1.0"
description = "Hands-on FastAPI for Snowman Labs Stack Meeting"
authors = ["Patrick Rodrigues"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.5"
asyncpg = "^0.22.0"
typer = "^0.3.2"
pydantic = {version = "^1.8.1", extras = ["dotenv"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
